refactored generating tokens to refresh token without problems